fix: fixed tech img to align left with margin-bottom mat-card-footer

--- a/src/app/company-card/company-card.component.scss
+++ b/src/app/company-card/company-card.component.scss
@@ -6,8 +6,12 @@
   .tech-logo {
     width: 50px;
     height: 50px;
+    margin-left: 16px;
   }
   .description {
     word-break: break-word;
+  }
+  mat-card-footer > div {
+    margin-bottom: 16px;
   }
 }
